Change for Github Deployment

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "luke-penney",
   "private": true,
+  "homepage": "https://ldp12.github.io/Personal-Portfolio-Website/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
@@ -31,6 +34,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.42",
     "tailwindcss": "^3.4.10",
-    "vite": "5.4.6"
+    "vite": "5.4.6",
+    "gh-pages": "^5.0.0"
   }
 }
